Get contributions from S3
