# docs/openapi.yaml
@@ -17,10 +17,10 @@ servers:
 - url: https://api.earthref.org/MagIC/v0.1
 
 paths:
-  /contributions/{id}:
+  /contribution/{id}:
     get:
       tags:
-      - Public Contributions
+      - Public Contribution
       summary: Retrieve a public contribution MagIC text file
       operationId: getContributionByID
       parameters:
@@ -35,22 +35,10 @@ paths:
         200:
           description: Contribution is returned in the format requested by the accept header
           content:
-            application/json:
-              schema:
-                example:
-                  contribution:
-                    id: 10747
-                    version: 6
-                    timestamp: '2015-07-09T02:20:01.000Z'
-                    contributor: '@magic'
-                    data_model_version: '3.0'
-                    reference: '10.1029/93JB00024'
-                  locations: [{
-                    location: Hawaii
-                  }]
             text/plain:
               schema:
-                example: 
+                type: string
+                example:
                   tab delimited	contribution
                   
                   id	version	timestamp	contributor	data_model_version	reference
@@ -64,8 +52,8 @@ paths:
                   location
                   
                   Hawaii
-        404:
-          description: Contribution ID not found in the private workspace
+        204:
+          description: Contribution ID not found
           content: {}
   /search/{table}:
     get:
@@ -103,10 +91,37 @@ paths:
           type: string
       responses:
         200:
-          description: Contribution is returned in the format requested by the accept header
+          description: Rows are returned in the format requested by the accept header
           content:
             application/json:
               schema:
+                required:
+                - contribution
+                type: object
+                properties:
+                  contribution:
+                    required:
+                    - id
+                    - version
+                    - timestamp
+                    - contributor
+                    - data_model_version
+                    type: object
+                    properties:
+                      id:
+                        type: integer
+                        minimum: 1
+                        example: 10747
+                      version:
+                        example: 6
+                      timestamp:
+                        example: '2015-07-09T02:20:01.000Z'
+                      contributor:
+                        example: '@magic'
+                      data_model_version:
+                        example: '3.0'
+                      reference:
+                        example: '10.1029/93JB00024'
                 example:
                   contribution:
                     id: 10747
@@ -118,176 +133,3 @@ paths:
                   locations: [{
                     location: Hawaii
                   }]
-            text/plain:
-              schema:
-                example: 
-                  tab delimited	contribution
-                  
-                  id	version	timestamp	contributor	data_model_version	reference
-                  
-                  10747	6	2015-07-09T02:20:01.000Z	@magic	3.0	10.1029/93JB00024
-                  
-                  >>>>>>>>>>
-                  
-                  tab delimited	locations
-                  
-                  location
-                  
-                  Hawaii
-        404:
-          description: Contribution ID not found in the private workspace
-          content: {}
-  /job/{id}:
-    get:
-      tags:
-      - EarthRef
-      summary: Retrieve job status
-      operationId: getJobByID
-      parameters:
-      - name: id
-        in: path
-        description: Job ID
-        required: true
-        schema:
-          type: string
-      responses:
-        200:
-          description: Job status is returned
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Job'
-        404:
-          description: Job ID not found
-          content: {}
-  /private-contribution/{id}:
-    get:
-      tags:
-      - Private Contributions
-      summary: Retrieve a contribution MagIC text file from your private workspace
-      operationId: getPrivateContributionByID
-      parameters:
-      - name: id
-        in: path
-        description: Contribution ID
-        required: true
-        schema:
-          type: integer
-      - name: format
-        in: query
-        description: Response format
-        schema:
-          type: string
-          default: text
-          enum:
-          - text
-          - json
-          - excel
-      responses:
-        401:
-          description: Unauthorized to access this private workspace
-          content: {}
-        404:
-          description: Contribution ID not found in the private workspace
-          content: {}
-      security:
-      - api_key: []
-  /private-contribution:
-    post:
-      tags:
-      - Private Contributions
-      summary: Upload a text or Excel file to a new contribution in your private workspace
-      operationId: postPrivateContribution
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              type: object
-              properties:
-                table:
-                  type: string
-                file:
-                  type: string
-                  format: binary
-      responses:
-        200:
-          description: Accepted for upload with job ID in the response
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Job'
-            text/plain:
-              schema:
-                example: '16fd2706-8baf-433b-82eb-8c7fada847da'
-        400:
-          description: Failed to create a job to process the upload
-          content:
-            text/plain:
-              schema:
-                example: 'Table name not defined in request body or file'
-        401:
-          description: Unauthorized to access this private workspace
-          content: {}
-      security:
-      - api_key: []
-components:
-  schemas:
-    Job:
-      required:
-      - job
-      - id
-      - status
-      type: object
-      properties:
-        job:
-          description: UUID v4 unique identifier for the job
-          type: string
-          example: '16fd2706-8baf-433b-82eb-8c7fada847da'
-        id:
-          description: ID for the contribution on which the job is working
-          type: integer
-          minimum: 0
-          example: '16432'
-        status:
-          description: Job status
-          type: string
-          enum:
-          - queued
-          - processing
-          - success
-          - error
-          example: success
-        started:
-          description: RFC3389 date/time when the job started
-          type: string
-          format: date-time
-          example: '2019-05-23T18:13:17+00:00'
-        run_time:
-          description: Run time length for the job in milliseconds
-          type: integer
-          minimum: 0
-          example: 32415
-        progress:
-          description: Percent complete
-          type: number
-          minimum: 0
-          example: 36.2
-        message:
-          description: Job status message
-          type: string
-          example: 'Queued for processing'
-        description:
-          description: Description of the work being done
-          type: string
-          example: ''
-        children:
-          description: Array of child job unique identifiers
-          type: array
-          items:
-            type: string
-          example: ['770f5c52-9975-4886-be15-b549a9b10293', '86e01c84-53f8-4cdd-bf67-8701aa5c9e11']
-  securitySchemes:
-    api_key:
-      type: apiKey
-      name: api_key
-      in: query
